@@ -1,3 +1,7 @@
+2000-03-09 Elliot Lee <sopwith@redhat.com>
+	* gconf/gconf-internals.c: Don't syslog things.
+	* gconf/examples/Makefile.am: Fix for builddir != srcdir.
+
 2000-03-08  Havoc Pennington  <hp@redhat.com>
 
 	* gconf/gconf.c (gconf_init): exit on error.
